# vrain_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
books/02/: book.cfg
src/: args.rs  background.rs  color.rs  config.rs  fonts.rs  layout.rs  layout_engine.rs  main.rs  multirows.rs  numerals.rs  plan.rs  preprocess.rs  renderer.rs  typesetter.rs
