[package]
name = "vrain_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
fontdue = "0.9.3"
printpdf = { version = "0.8.2", features = ["png", "jpeg"] }
zhconv = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
] }
